# caffe

./: .gitignore  CMakeLists.txt  Makefile  Makefile.config  README.md  detected.txt  howto_run_SSD.txt  installCaffe.sh  installCaffeCuDNN.sh  installCaffeTX1.sh  installCaffeTX2.sh
AscendCode/: Note on 420.txt  ascend_ssd_pascal_512.py  ascend_ssd_pascal_video.py  ascend_ssd_pascal_webcam.py  bbox_util.cpp  log_to_graph.py
cmake/: ConfigGen.cmake  Cuda.cmake  Dependencies.cmake  Misc.cmake  ProtoBuf.cmake  Summary.cmake  Targets.cmake
cmake/Templates/: CaffeConfig.cmake.in
data/VOC0712/: trainval.txt
data/ascend/: create_data.sh  create_list.sh  labelmap.prototxt  test.txt  test_name_size.txt  trainval.txt
examples/cifar10/: convert_cifar_data.cpp
examples/cpp_classification/: classification.cpp  multiinput-classification.cpp  video-classification.cpp
examples/mnist/: convert_mnist_data.cpp
examples/siamese/: convert_mnist_siamese_data.cpp
examples/ssd/: ascend_ssd_pascal.py  ascend_ssd_pascal_512.py  ascend_ssd_pascal_video.py  ssd_coco.py  ssd_detect.cpp  ssd_pascal_512.py
include/caffe/: blob.hpp  caffe.hpp  common.hpp  data_reader.hpp  data_transformer.hpp  export.hpp  filler.hpp  internal_thread.hpp  layer.hpp  layer_factory.hpp  logging.hpp  net.hpp  parallel.hpp  sgd_solvers.hpp  solver.hpp  solver_factory.hpp  syncedmem.hpp
include/caffe/layers/: absval_layer.hpp  accuracy_layer.hpp  annotated_data_layer.hpp  argmax_layer.hpp  base_conv_layer.hpp  base_data_layer.hpp  batch_norm_layer.hpp  batch_reindex_layer.hpp  bias_layer.hpp  bnll_layer.hpp  concat_layer.hpp  contrastive_loss_layer.hpp  conv_layer.hpp  crop_layer.hpp  cudnn_conv_layer.hpp  cudnn_lcn_layer.hpp  cudnn_lrn_layer.hpp  cudnn_pooling_layer.hpp  cudnn_relu_layer.hpp  cudnn_sigmoid_layer.hpp  cudnn_softmax_layer.hpp  cudnn_tanh_layer.hpp  data_layer.hpp  deconv_layer.hpp  detection_evaluate_layer.hpp  detection_output_layer.hpp  dropout_layer.hpp  dummy_data_layer.hpp  eltwise_layer.hpp  elu_layer.hpp  embed_layer.hpp  euclidean_loss_layer.hpp  exp_layer.hpp  filter_layer.hpp  flatten_layer.hpp  hdf5_data_layer.hpp  hdf5_output_layer.hpp  hinge_loss_layer.hpp  im2col_layer.hpp  image_data_layer.hpp  (+45 more)
include/caffe/proto/: caffe_pb.h
include/caffe/test/: test_caffe_main.hpp  test_gradient_check_util.hpp
include/caffe/util/: bbox_util.hpp  benchmark.hpp  blocking_queue.hpp  cudnn.hpp  db.hpp  db_leveldb.hpp  db_lmdb.hpp  device_alternate.hpp  hdf5.hpp  im_transforms.hpp  insert_splits.hpp  io.hpp  math_functions.hpp  mkl_alternate.hpp  sampler.hpp  signal_handler.h  upgrade_proto.hpp
python/: CMakeLists.txt  conv_mean.py
python/caffe/: __init__.py  _caffe.cpp  _caffe.py  model_libs.py
src/caffe/: CMakeLists.txt  blob.cpp  common.cpp  data_reader.cpp  data_transformer.cpp  internal_thread.cpp  layer.cpp  layer_factory.cpp  logging.cpp  net.cpp  parallel.cpp  solver.cpp  solver_factory.cpp  syncedmem.cpp
src/caffe/layers/: accuracy_layer.cpp  annotated_data_layer.cpp  base_conv_layer.cpp  base_data_layer.cpp  batch_norm_layer.cpp  bias_layer.cpp  bnll_layer.cu  contrastive_loss_layer.cpp  conv_layer.cu  cudnn_conv_layer.cpp  cudnn_conv_layer.cu  data_layer.cpp  deconv_layer.cu  detection_output_layer.cpp  detection_output_layer.cu  eltwise_layer.cpp  eltwise_layer.cu  embed_layer.cpp  filter_layer.cpp  filter_layer.cu  hdf5_data_layer.cpp  hdf5_data_layer.cu  hdf5_output_layer.cpp  hinge_loss_layer.cpp  image_data_layer.cpp  infogain_loss_layer.cpp  inner_product_layer.cpp  loss_layer.cpp  lrn_layer.cpp  lrn_layer.cu  memory_data_layer.cpp  multibox_loss_layer.cpp  multinomial_logistic_loss_layer.cpp  normalize_layer.cpp  parse_evaluate_layer.cpp  parse_output_layer.cpp  permute_layer.cpp  pooling_layer.cpp  pooling_layer.cu  prelu_layer.cpp  (+18 more)
src/caffe/proto/: caffe.pb.cpp  caffe.proto
src/caffe/solvers/: adadelta_solver.cpp  adadelta_solver.cu  adagrad_solver.cpp  adagrad_solver.cu  adam_solver.cpp  adam_solver.cu  nesterov_solver.cpp  nesterov_solver.cu  rmsprop_solver.cpp  rmsprop_solver.cu  sgd_solver.cpp  sgd_solver.cu
src/caffe/test/: CMakeLists.txt  cmake_test_defines.hpp.gen.cmake  test_annotated_data_layer.cpp  test_blob.cpp  test_data_layer.cpp  test_data_transformer.cpp  test_db.cpp  test_dummy_data_layer.cpp  test_gradient_based_solver.cpp  test_hdf5_output_layer.cpp  test_hdf5data_layer.cpp  test_image_data_layer.cpp  test_inner_product_layer.cpp  test_internal_thread.cpp  test_io.cpp  test_lrn_layer.cpp  test_lstm_layer.cpp  test_multibox_loss_layer.cpp  test_net.cpp  test_platform.cpp  test_protobuf.cpp  test_reduction_layer.cpp  test_rnn_layer.cpp  test_solver.cpp  test_split_layer.cpp  test_util_blas.cpp
src/caffe/test/test_data/: sample_data_list.txt.gen.cmake
src/caffe/util/: bbox_util.cpp  benchmark.cpp  blocking_queue.cpp  cudnn.cpp  db.cpp  db_leveldb.cpp  db_lmdb.cpp  detectnet_coverage_rectangular.cpp  gpu_memory.cpp  hdf5.cpp  im2col.cpp  im2col.cu  im_transforms.cpp  insert_splits.cpp  io.cpp  math_functions.cpp  math_functions.cu  mkl_alternate.cpp  mkstemp.cpp  sampler.cpp  signal_handler.cpp  upgrade_proto.cpp
src/gtest/: gtest.h
tools/: CMakeLists.txt  caffe.cpp  compute_image_mean.cpp  convert_annoset.cpp  convert_imageset.cpp  create_label_map.cpp  device_query.cpp  extract_features.cpp  finetune_net.cpp  get_image_size.cpp  net_speed_benchmark.cpp  predict_video.cpp  test_net.cpp  train_net.cpp  upgrade_net_proto_binary.cpp  upgrade_net_proto_text.cpp  upgrade_solver_proto_text.cpp
windows/: CommonSettings.props
windows/caffe/: caffe.vcxproj
windows/classification/: classification.vcxproj
windows/libcaffe/: libcaffe.vcxproj  libcaffe.vcxproj.filters
